--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 </body>
-    <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif" alt="">
+    <img class="bear-img" src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif" alt="Ours en peluche">
     <h1>Sandra, veux-tu être ma Valentine ? ?</h1>
     <div class="btn">
         <button class="yes" onclick="clickfunc()">Oui</button>
